[notes/ms_sim] area gradients

--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -724,5 +724,40 @@ Cumulative displacement,
     }{{\delta_k^n}^4\tau_n^4}
   }
 }
+Area,
+\eqar{
+  \pdiff{\mathrm{Im}\paren{\gamma_k^n}}{\tau_n}=&\pdiff{}{\tau_n}\paren{\Omega_n^2+\Omega_n\Omega'_n\tau_n}\frac{\delta_k^n\tau_n-\sin\paren{{\delta_k^n}\tau_n}}{{\delta_k^n}^2}
+  +{\Omega'_n}^2\pdiff{}{\tau_n}\frac{
+    {\delta_k^n}^3\tau_n^3/3
+    -\sin\paren{{\delta_k^n}\tau_n}
+    +{\delta_k^n}\tau_n\cos\paren{{\delta_k^n}\tau_n}
+  }{{\delta_k^n}^4}\\
+  =&\Omega_n\Omega'_n\frac{\delta_k^n\tau_n-\sin\paren{{\delta_k^n}\tau_n}}{{\delta_k^n}^2}
+  +\paren{\Omega_n^2+\Omega_n\Omega'_n\tau_n}\frac{
+    1-\cos\paren{{\delta_k^n}\tau_n}
+  }{{\delta_k^n}}
+  +{\Omega'_n}^2\tau_n\frac{
+    {\delta_k^n}\tau_n
+    -\sin\paren{{\delta_k^n}\tau_n}
+  }{{\delta_k^n}^2}\\
+  =&\paren{\Omega_n\Omega'_n\tau_n^2+{\Omega'_n}^2\tau_n^3}\frac{\delta_k^n\tau_n-\sin\paren{{\delta_k^n}\tau_n}}{{\delta_k^n}^2\tau_n^2}
+  +\paren{\Omega_n^2\tau_n+\Omega_n\Omega'_n\tau_n^2}\frac{
+    1-\cos\paren{{\delta_k^n}\tau_n}
+  }{{\delta_k^n}\tau_n}
+}
+\eqar{
+  \pdiff{}{\varphi_n}\mathrm{Im}\paren{\gamma_k^n}=&0
+}
+\eqar{
+  \pdiff{\mathrm{Im}\paren{\gamma_k^n}}{\Omega_n}=&\tau_n\paren{2\Omega_n\tau_n+\Omega'_n\tau_n^2}\frac{\delta_k^n\tau_n-\sin\paren{{\delta_k^n}\tau_n}}{{\delta_k^n}^2\tau_n^2}
+}
+\eqar{
+  \pdiff{\mathrm{Im}\paren{\gamma_k^n}}{\Omega'_n}=&\tau_n^2\paren{\Omega_n\tau_n\frac{\delta_k^n\tau_n-\sin\paren{{\delta_k^n}\tau_n}}{{\delta_k^n}^2\tau_n^2}
+  +2{\Omega'_n}\tau_n^2\frac{
+    {\delta_k^n}^3\tau_n^3/3
+    -\sin\paren{{\delta_k^n}\tau_n}
+    +{\delta_k^n}\tau_n\cos\paren{{\delta_k^n}\tau_n}
+  }{{\delta_k^n}^4\tau_n^4}}
+}
 
 \end{document}
