[notes/ms_sim] fix equation

--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -963,7 +963,7 @@ Area gradient w.r.t. mode frequency,
     -\paren{\Omega_n^2\tau_n^2+\Omega_n\Omega'_n\tau_n^3}
     \frac{
       \paren{6-{\delta_k^n}^2\tau_n^2}\sin\paren{{\delta_k^n}\tau_n}
-      -2{\delta_k^n}\tau_n+4{\delta_k^n}\tau_n\cos\paren{{\delta_k^n}\tau_n}
+      -2{\delta_k^n}\tau_n-4{\delta_k^n}\tau_n\cos\paren{{\delta_k^n}\tau_n}
     }{{\delta_k^n}^4\tau_n^4}
   }\\
   &\rparen{-{\Omega'_n}^2\tau_n^4
