[notes/ms_sim] fix typo

--- a/notes/ms_sim.tex
+++ b/notes/ms_sim.tex
@@ -612,11 +612,11 @@ The gradients w.r.t. other control parameters, displacement,
     \paren{\ui\Omega_n\delta_k^n-\Omega'_n}\frac{\sin\paren{\delta_k^n\tau_n}}{{\delta_k^n}}
     +\Omega'_n\frac{\sin\paren{\delta_k^n\tau_n}}{\delta_k^n}+\paren{\Omega_n+\Omega'_n\tau_n}
     \cos\paren{\delta_k^n\tau_n}
-    -\ui\Omega'_n\tau_n\sin\paren{\delta_k^n\tau_n}
+    +\ui\Omega'_n\tau_n\sin\paren{\delta_k^n\tau_n}
   }\\
   =&\ue^{\ui\varphi_k^n}\paren{
     \paren{\Omega_n+\Omega'_n\tau_n}\cos\paren{\delta_k^n\tau_n}
-    +\ui\paren{\Omega_n-\Omega'_n\tau_n}\sin\paren{\delta_k^n\tau_n}
+    +\ui\paren{\Omega_n+\Omega'_n\tau_n}\sin\paren{\delta_k^n\tau_n}
   }
 }
 \eqar{
