Change AmpSpec API to exclusively use callback to define the waveform
Add more tests

--- a/examples/Compute_Multi_Pairs_20250714.ipynb
+++ b/examples/Compute_Multi_Pairs_20250714.ipynb
@@ -186,7 +186,7 @@
     "                         ((:dis2, 0), (:disδ2, 0), area_args..., areaδ_args...),\n",
     "                         Opts.autodiff(PreOptObjective{7}()), modes, buf,\n",
     "                         freq=Seq.FreqSpec(true, sym=false),\n",
-    "                         amp=Seq.AmpSpec(cb=BlackmanStartEnd{ratio}(), mid_order=-1))\n",
+    "                         amp=Seq.AmpSpec(cb=BlackmanStartEnd{ratio}()))\n",
     "end\n",
     "\n",
     "const preobjs = [get_preobj(modes, buf, 0.6) for buf in compute_bufs_opt];"
@@ -220,7 +220,7 @@
     "    nargs = Seq.nparams(preobj)\n",
     "    tracker = Opts.NLVarTracker(nargs)\n",
     "    Opts.set_bound!(tracker, preobj.param.τ, τmin, τmax)\n",
-    "    Opts.set_bound!(tracker, preobj.param.Ωbase, Ω, Ω)\n",
+    "    Opts.set_bound!(tracker, preobj.param.Ωs[1], Ω, Ω)\n",
     "    for ω in preobj.param.ωs\n",
     "        Opts.set_bound!(tracker, ω, ωmin, ωmax)\n",
     "    end\n",
