--- a/examples/Compute_Solution_20250710.ipynb
+++ b/examples/Compute_Solution_20250710.ipynb
@@ -172,7 +172,7 @@
     "                               (:areaδ, 0), (:τ, 0)),\n",
     "                              objfunc, modes, buf_opt,\n",
     "                              freq=Seq.FreqSpec(true, sym=false),\n",
-    "                              amp=Seq.AmpSpec(cb=blackman_start_end, mid_order=-1));"
+    "                              amp=Seq.AmpSpec(cb=blackman_start_end));"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "const nargs = Seq.nparams(nlmodel)\n",
     "const tracker = Opts.NLVarTracker(nargs)\n",
     "Opts.set_bound!(tracker, nlmodel.param.τ, 0.1, 2)\n",
-    "Opts.set_bound!(tracker, nlmodel.param.Ωbase, 0.2, 0.4)\n",
+    "Opts.set_bound!(tracker, nlmodel.param.Ωs[1], 0.2, 0.4)\n",
     "for ω in nlmodel.param.ωs\n",
     "    Opts.set_bound!(tracker, ω, 2π * 2.39, 2π * 2.52)\n",
     "end"
